[package]
name = "sofit-test"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper-tungstenite = { version = "0.8.1" }
hyper = { version = "0.14.21", features = ["server", "http1", "tcp"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-core = "0.1"
opencv = "0.71"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
clap = "2.33"